# pet_project_private_library

./: README.md  docker-compose.yml  setup.cfg  test.py
book_service/: Dockerfile  entrypoint_cli.sh  entrypoint_consumer.sh  pyproject.toml  run.py  setup.cfg
book_service/adapters/: cli.py
book_service/adapters/books_api/: app.py  auth.py  controllers.py
book_service/adapters/database/: mapping.py  repositories.py  settings.py  tables.py
book_service/adapters/message_bus/: __init__.py  consumer.py  scheme.py
book_service/application/: dataclasses.py  errors.py  interfaces.py  services.py
book_service/composites/: __init__.py  app_api.py  book_loader.py  cli.py  consumer.py
book_service/tests/: conftest.py  tests.py
docs/: components.puml  db_scheme_books.puml  db_scheme_users.puml  user_actions.puml
nginx/: nginx.conf
postgres/: init.sql
user_service/: Dockerfile  README.md  run.py  setup.cfg
user_service/adapters/: cli.py
user_service/adapters/database/: repositories.py  settings.py  tables.py
user_service/adapters/message_bus/: __init__.py  consumer.py  scheme.py  settings.py
user_service/adapters/users_api/: app.py  auth.py  controllers.py
user_service/application/: dataclasses.py  errors.py  interfaces.py  services.py
user_service/composites/: app_api.py  cli.py  consumer_run.py
user_service/tests/: conftest.py  tests.py
user_service/tests/integration/controllers/: conftest.py  test_user_controller.py
user_service/tests/integration/repositories/: conftest.py  test_user_repo.py
user_service/tests/unit/: conftest.py  tests.py
(+6 files in other folders)
