[metadata]
name = demo-project
version = 1.0.0
description = Демо проект, построенный по чистой архитектуре
author = Kerim Shaydullin
author_email = Kerim.Shaydullin@evraz.com
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find_namespace:
python_requires = ~=3.7.9

install_requires =
    attrs
    PyJWT
    pydantic~=1.8.2
    sqlalchemy
    alembic
    hupper
    gunicorn
    waitress
    click
    python-json-logger
    evraz-classic-components~=1.0.0
    evraz-classic-aspects~=1.0.0
    evraz-classic-app-layer~=1.0.3
    evraz-classic-http-api~=1.1.0
    evraz-classic-http-auth~=1.0.0
    evraz-classic-sql-storage~=1.0.1
    evraz-classic-messaging~=1.0.0
    evraz-classic-messaging-kombu~=1.0.0
    pytest
    psycopg2-binary

[options.extras_require]
dev =
    pytest~=6.2.5
    pytest-cov~=2.12.1
    isort~=5.10.0
    yapf~=0.32.0

[options.entry_points]
console_scripts =
    user_consumer=user_service.composites.cli:cli

;pip install -e ".[dev]"  #library installation